--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,27 +1,33 @@
 // For format details, see https://aka.ms/devcontainer.json. For config options, see the
 // README at: https://github.com/devcontainers/templates/tree/main/src/docker-outside-of-docker
 {
-	"name": "Docker outside of Docker",
+	"name": "BAAD",
 	// Or use a Dockerfile or Docker Compose file. More info: https://containers.dev/guide/dockerfile
-	"image": "mcr.microsoft.com/devcontainers/base:bullseye",
+	// "image": "mcr.microsoft.com/devcontainers/base:bullseye",
+    "build": {
+        // Path is relative to the devcontainer.json file.
+        "dockerfile": "Dockerfile"
+    },
 
-	"features": {
-		"ghcr.io/devcontainers/features/docker-outside-of-docker:1": {
-			"version": "latest",
-			"enableNonRootDocker": "true",
-			"moby": "true"
-		},
-		"ghcr.io/devcontainers/features/common-utils:2": {},
-		"ghcr.io/devcontainers/features/github-cli:1": {}
-		// "ghcr.io/devcontainers-contrib/features/actions-runner-noruntime-noexternals:1": {},
-		// "ghcr.io/devcontainers-contrib/features/gh-release:1": {},
-		// "ghcr.io/customink/codespaces-features/common-amzn:1": {},
-		// "ghcr.io/msclock/features/gitlab-ci-local:0": {},
-		// "ghcr.io/codeman99/features/circleci-cli:1": {},
-		// "ghcr.io/schlich/cst-devcontainer-feature/container-structure-test:1": {},
-		// "ghcr.io/schlich/devcontainer-features/container-structure-test:1": {},
-		// "ghcr.io/audacioustux/devcontainers/common-utils-extras:1": {}
-	},
+
+	//-----------------------------------------------------------------------------
+	// "features": {
+	// 	"ghcr.io/devcontainers/features/docker-outside-of-docker:1": {
+	// 		"version": "latest",
+	// 		"enableNonRootDocker": "true",
+	// 		"moby": "true"
+	// 	},
+	// 	"ghcr.io/devcontainers/features/common-utils:2": {},
+	// 	"ghcr.io/devcontainers/features/github-cli:1": {}
+	// 	// "ghcr.io/devcontainers-contrib/features/actions-runner-noruntime-noexternals:1": {},
+	// 	// "ghcr.io/devcontainers-contrib/features/gh-release:1": {},
+	// 	// "ghcr.io/customink/codespaces-features/common-amzn:1": {},
+	// 	// "ghcr.io/msclock/features/gitlab-ci-local:0": {},
+	// 	// "ghcr.io/codeman99/features/circleci-cli:1": {},
+	// 	// "ghcr.io/schlich/cst-devcontainer-feature/container-structure-test:1": {},
+	// 	// "ghcr.io/schlich/devcontainer-features/container-structure-test:1": {},
+	// 	// "ghcr.io/audacioustux/devcontainers/common-utils-extras:1": {}
+	// },
 
 	// Use this environment variable if you need to bind mount your local source code into a new container.
 	"remoteEnv": {
