--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -1,5 +1,9 @@
 # R 4.0.0
 FROM drclab/rstan:2.32.6 as rbase
+#--------------------------------
+RUN apt install -y docker.io \
+    && git
+#--------------------------------
 
 CMD ["R"]
 
@@ -10,5 +14,4 @@ CMD ["R"]
 #   && apt-get install -y apt-utils \
 #   && apt-get install -y libv8-dev libcurl4 libcurl4-openssl-dev libxml2-dev libxml2 \
 #   && install2.r --ncpus 4 --deps NA StanHeaders rstan methods abind mvtnorm plyr functional reshape2 ggplot2
-
 
