--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,5 @@ coursera/noaa-weather-sample-data/
 
 coursera/._noaa-weather-sample-data
 *.tar.gz
+coursera/Capstone/CapstoneDB.sqlite
+coursera/Capstone/r.png
